--- a/modelo_seminarios_latex_v1.2/artigo_bibliografia.bib
+++ b/modelo_seminarios_latex_v1.2/artigo_bibliografia.bib
@@ -4,94 +4,9 @@
 % Saved with string encoding Unicode (UTF-8) 
 
 
-% Referencia Livro
-@book{Pressman:2007,
-  Title     = {SOFTERRR Engineering: A Practitioner's Approach},
-  Author    = {Roger Pressman},
-  Year      = {2005},
-  Isbn      = {0077227808, 9780077227807},
-  Edition   = {6},
-  Publisher = {McGraw-Hill, Inc.},
-  Address   = {New York, NY, USA},
-} 
-
-@book{Fulano:2009,
-  Title     = {Livro de Eng. Civil},
-  Author    = {Fulano de tal},
-  Year      = {2005},
-  Isbn      = {0077227808, 9780077227807},
-  Edition   = {6},
-  Publisher = {McGraw-Hill, Inc.},
-  Address   = {New York, NY, USA},
-} 
-
-% Referencia Artigo
-@article{Ferris:2003,
-  Title      = {What Are Web Services?},
-  Author     = {Christopher Ferris and Joel Farrell},
-  Journal    = {Commun. ACM},
-  Volume     = {46},
-  Number     = {6},
-  Year       = {2003},
-  Issn       = {0001-0782},
-  Pages      = {31--},
-  Acmid      = {777335},
-  Publisher  = {ACM},
-  Address    = {New York, NY, USA},
-} 
-
-% Referencia artigo de congresso/conferencia
-@conference{Rosenfeld:1970,
-  Author    = {A. Rosenfeld and E. B. Troy},
-  Booktitle = {A Symposium on Feature Extraction and Selection in Pattern Recognition},
-  Pages     = {115-124},
-  Title     = {Visual texture analysis},
-  Volume    = {1},
-  Year      = {1970}
-}
-
-% Referencia em relatorio
-@techreport{Diday:1989,
-  Title       = {Introduction {\`a} l'analyse des donn{\'e}es symboliques.},
-  Author      = {Edwin Diday},
-  Institution = {Institut National de Recherche en Informatique et en Automatique, INRIA},
-  Type        = {Research Report},
-  Year        = {1989}
-}
-
-% Referencia Tese/PhD
-@phdthesis{Domingues:2010,
-  Title   = {M{\'e}todos Robustos de Regress{\~a}o Linear para Dados Simb{\'o}licos do Tipo Intervalo},
-  Author  = {Marco Antonio de Oliveira Domingues},
-  Address = {Recife},
-  School  = {Universidade Federal de Pernambuco (UFPE)},
-  Year    = {2010}
-}
-
-% Referencia Site/Web
-@url{Visible:2013,
-  author = {Ingo Lutkebohle},
-  title  = {BWorld Robot Control Software},
-  year   = {2008}, 
-  note   = {http://www.nlm.nih.gov/research/visible/ - accessed 19-July-2008}
-}
-
-@url{Campos:2016,
-author = {Augusto Campos},
-title = {O que {\'e} software livre},
-year = {2006},
-note = {http://br-linux.org/linux/faq-softwarelivre}
-}
-
-@url{Jose:2016,
-author = {Jos{\'e} Silva},
-title = {Economia e liberdade: o software livre une o {\'u}til ao agrad{\'a}vel},
-year = {2009},
-note = {https://www.vivaolinux.com.br/artigo/Economia-e-liberdade-o-software-livre-une-o-util-ao-agradavel}
-}
-
+% Referencia Artigo 
 @article{riehle2012single,
-  title={The single-vendor commercial open course business model},
+  title	={The single-vendor commercial open course business model},
   author={Riehle, Dirk},
   journal={Information Systems and e-Business Management},
   volume={10},
@@ -101,58 +16,133 @@ note = {https://www.vivaolinux.com.br/artigo/Economia-e-liberdade-o-software-liv
   publisher={Springer}
 }
 
+@article{SUSE,
+  title={SuSE Linux 9.1 - O poderoso e vers{\'a}til Linux da Novell},
+  author={Zanetti, Diogo G.},
+  journal={Viva o Linux},
+  volume={1},
+  number={1},
+  pages={1--6},
+  year={2004},
+  publisher={Viva o Linux}
+}
+
+@url{Campos:2016,
+  author = {Augusto Campos},
+  title = {O que {\'e} software livre},
+  year = {2006},
+  note = {http://br-linux.org/linux/faq-softwarelivre}
+}
+
+@url{Jose:2016,
+author = {Jos{\'e} Silva},
+  title = {Economia e liberdade: o software livre une o {\'u}til ao agrad{\'a}vel},
+  year = {2009},
+  note = {https://www.vivaolinux.com.br/artigo/Economia-e-liberdade-o-software-livre-une-o-util-ao-agradavel}
+}
+
+
 @url{Brodkin,
-author = {Jon Brodkin},
-title = {Ubuntu maker boosted revenue in 2013 but doubled loss to \$21 million}.
-year = {2014},
-note = {http://arstechnica.com/business/2014/01/ubuntu-maker-boosted-revenue-in-2013-but-doubled-loss-to-21-million/}
+  author = {Jon Brodkin},
+  title = {Ubuntu maker boosted revenue in 2013 but doubled loss to \$21 million}.
+  year = {2014},
+  note = {http://arstechnica.com/business/2014/01/ubuntu-maker-boosted-revenue-in-2013-but-doubled-loss-to-21-million/}
 }
 
 @url{Red,
-author = {Red Hat},
-title = {"RED HAT INC 2014 Annual Report Form (10-K)"}.
-year = {2014},
-note = {http://www.sec.gov/Archives/edgar/data/1087423/000119312514157171/0001193125-14-157171-index.htm}
+  author = {Red Hat},
+  title = {"RED HAT INC 2014 Annual Report Form (10-K)"}.
+  year = {2014},
+  note = {http://www.sec.gov/Archives/edgar/data/1087423/000119312514157171/0001193125-14-157171-index.htm}
 }
 
 @url{Mozilla,
-author = {Mozilla},
-title = {INDEPENDENT AUDITORS? REPORT AND CONSOLIDATED FINANCIAL STATEMENTS}.
-year = {2013},
-note = {https://static.mozilla.com/moco/en-US/pdf/Mozilla_Audited_Financials_2014.pdf}
+  author = {Mozilla},
+  title = {INDEPENDENT AUDITORS? REPORT AND CONSOLIDATED FINANCIAL STATEMENTS}.
+  year = {2013},
+  note = {https://static.mozilla.com/moco/en-US/pdf/Mozilla_Audited_Financials_2014.pdf}
 }
 
 @url{Hecker:2016,
-author = {Frank Hecker},
-title = {Setting Up Shop: The Business of Open-Source Software},
-year = {2000},
-note = {http://hecker.org/writings/setting-up-shop}
+  author = {Frank Hecker},
+  title = {Setting Up Shop: The Business of Open-Source Software},
+  year = {2000},
+  note = {http://hecker.org/writings/setting-up-shop}
 }
 
 @url{Castro,
-author = {Davi de Castro},
-title = {Entenda por que software livre {\'e} mais seguro},
-year = {2015},
-note = {http://www.ebc.com.br/tecnologia/2015/07/entenda-por-que-software-livre-e-mais-seguro-que-software-proprietario}
+  author = {Davi de Castro},
+  title = {Entenda por que software livre {\'e} mais seguro},
+  year = {2015},
+  note = {http://www.ebc.com.br/tecnologia/2015/07/entenda-por-que-software-livre-e-mais-seguro-que-software-proprietario}
 }
 
-@mastersthesis{Angelo:2000,
-	Address = {Porto Alegre, RS},
-	Author = {Neide Pizzolato Angelo},
-	Date-Added = {2013-01-24 18:21:21 -0300},
-	Date-Modified = {2013-01-24 18:22:54 -0300},
-	Month = {janeiro},
-	School = {Universidade Federal do Rio Grande do Sul},
-	Title = {Aplica{\c c}{\~a}o de Filtros de Gabor no Processo de Classifica{\c c}{\~a}o de Imagens Digitais com Base em Atributos de Textura},
-	Year = {2000}}
-
-
-@article{Li:2003,
-  Title   = {Texture classification using the support vector machines},
-  Author  = {Shutao Li and James T. Kwok and Hailong Zhu and Yaonan Wang},
-  Journal = {Pattern Recognition},
-  Number  = {12},
-  Pages   = {2883-2893},
-  Volume  = {36},
-  Year    = {2003}
+@url{RHEL,
+  author = {Red Hat},
+  title = {Red Hat Enterprise Linux},
+  year = {2016},
+  note = {https://www.redhat.com/en/technologies/linux-platforms/enterprise-linux}
 }
+
+@url{Google,
+  author = {Terra},
+  title = {Google paga US\$ 900 mi para ser buscador padr{\~a}o do Firefox},
+  year = {2016},
+  note = {https://tecnologia.terra.com.br/negocios-e-ti/google-paga-us-900-mi-para-ser-buscador-padrao-do-firefox,13a8e194c2bda310VgnCLD200000bbcceb0aRCRD.html}
+}
+
+@url{Gorokhova,
+  author = {Alisa Gorokhova},
+  title = {Software as a Product vs. Software as a Service},
+  year = {2016},
+  note = {https://blog.bynder.com/en/knowledge/our-blog/software-as-a-product-vs-software-as-a-service}
+}
+
+@url{Ricardo,
+  author = {Antonio Ricardo},
+  title = {O que e SaaS, IaaS e PaaS em Cloud Computing? (Conceitos basicos)},
+  year = {2013},
+  note = {https://antonioricardo.org/2013/03/28/o-que-e-saas-iaas-e-paas-em-cloud-computing-conceitos-basicos/}
+}
+
+@url{FSF,
+  author = {Free Software Foundation},
+  title = {O que {\'e} o software livre?},
+  year = {2016},
+  note = {https://www.gnu.org/philosophy/free-sw.pt-br.html}
+}
+
+@url{Softex,
+  author = {Softex},
+  title = {Software Livre: Tend{\^e}ncias, oportunidades, desafios.},
+  year = {2013},
+  note = {http://www.softex.br/wp-content/uploads/2016/04/caderno-tematico-software-livre.pdf}
+}
+
+@url{Tadeu,
+  author = {Erivelto Tadeu},
+  title = {Receita de fabricantes de software com SaaS cresce 60\% em um ano e atinge US\$ 20 bi},
+  year = {2014},
+  note = {http://convergecom.com.br/tiinside/18/03/2014/receita-de-fabricantes-de-software-com-saas-cresce-60-e-atinge-us-20-bilhoes/}
+}
+
+@url{Giz,
+  author = {Felipe Ventura},
+  title = {Apple e Google querem que voc{\^e} pague por assinatura em apps},
+  year = {2016},
+  note = {http://gizmodo.uol.com.br/apple-google-assinatura-apps/}
+}
+
+@url{Open,
+  author = {Openstack},
+  title = {What is OpenStack?},
+  year = {2016},
+  note = {https://www.openstack.org/software/}
+}
+
+@url{Visible:2016,
+	author	= {Comunity},
+	title	= {Software License},
+	year	= {-},
+	note	= {https://en.wikipedia.org/wiki/Software_license}
+} 
